final home-page

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -20,8 +20,9 @@
     font-family: 'La Belle Aurore';
 }
 
-.bottom-tags-html{
-    margin-left: -20px;
+.bottom-tags{
+    top: auto;
+    bottom: 35px;
 }
 
 .container{
