--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -4,7 +4,7 @@
         left: 10%;
         top: 50%;
         transform: translateY(-50%);
-        width: 40%;
+        width: 70%;
         max-height: 90%;
     }
     h1{
@@ -32,7 +32,6 @@
             font-size: 18px;
             position: absolute;
             margin-top: 18px;
-            margin-left: 20px;
             animation: fadeIn 1s 1.7s backwards;
             opacity: 0.6;
         }
@@ -48,9 +47,9 @@
     }
     h2{
         color: #323232;
-        margin-top: 20px;
+        margin-top: 10%;
         font-weight: 400;
-        font-size: 14px;
+        font-size: 18px;
         font-family: sans-serif;
         letter-spacing: 3px;
         animation: fadeIn 1s 1.8s backwards;
