--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -4,7 +4,7 @@
         left:10%;
         top:50%;
         transform: translateY(-50%);
-        width:55%;
+        width:35%;
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
@@ -129,4 +129,44 @@
         float: right;
         border-radius: 4px;
     }
+}
+
+.info-map{
+    position: absolute;
+    background-color: #000;
+    top: 50px;
+    right: 30%;
+    z-index: 999999;
+    width: 267px;
+    padding: 20px;
+    color: #fff;
+    font-family: 'Helvetica';
+    font-size: 17px;
+    font-weight: 300;
+    opacity: 0;
+    animation: fadeIn 1s 1.5s;
+    animation-fill-mode: forwards;
+
+    span{
+        font-size: 16px;
+        display: block;
+        padding-top: 20px;
+        color:#a04455;
+    }
+}
+
+.map-wrap{
+    background: rgba(50, 72, 69, 0.1);
+    float: right;
+    width: 53%;
+    height: 100%;
+}
+
+.leaflet-container{
+    height: 100%;
+    width: 100%;
+    position: relative;
+    opacity: 0;
+    animation: backInRight 1s 1.2s;
+    animation-fill-mode: forwards;
 }
